feat(webserver): Provide mqtt config properties
