# backend/lib/webserver/doc/ValetudoRouter.openapi.json
@@ -152,6 +152,56 @@
       }
     }
   },
+  "/api/v2/valetudo/config/interfaces/mqtt/properties": {
+    "get": {
+      "tags": [
+        "Valetudo"
+      ],
+      "summary": "Get MQTT config properties such as the default values",
+      "responses": {
+        "200": {
+          "description": "Ok",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "additionalProperties": false,
+                "properties": {
+                  "defaults": {
+                    "type": "object",
+                    "additionalProperties": false,
+                    "properties": {
+                      "identity": {
+                        "type": "object",
+                        "additionalProperties": false,
+                        "properties": {
+                          "friendlyName": {
+                            "type": "string"
+                          },
+                          "identifier": {
+                            "type": "string"
+                          }
+                        }
+                      },
+                      "customizations": {
+                        "type": "object",
+                        "additionalProperties": false,
+                        "properties": {
+                          "topicPrefix": {
+                            "type": "string"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  },
   "/api/v2/valetudo/config/interfaces/http/auth/basic": {
     "get": {
       "tags": [
